Fix footer visibility

--- a/src/index.css
+++ b/src/index.css
@@ -500,6 +500,7 @@ span.label {
   position: fixed;
   max-width: 30%;
   top: 60px;
+  height: auto;
 }
 
 .drawer-root {
